[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inifix-cli"
version = "0.1.0"
description = "A command line interface for inifix."
authors = [
    { name = "C.M.T. Robert" },
]
requires-python = ">=3.10"
dependencies = [
    "inifix==6.0.0",
    "typer-slim>=0.15.1",
]

[project.license]
text = "GPL-3.0"

[project.scripts]
inifix = "inifix_cli:app"

[dependency-groups]
test = [
    "hypothesis>=6.110.0",
    "pytest>=7.0.0",
]
concurrency = [
    {include-group = "test"},
    "pytest-repeat>=0.9.3",
]
covcheck = [
    {include-group = "test"},
    "coverage[toml]>=6.5.0 ; python_version == '3.10'",
    "coverage>=6.5.0 ; python_version >= '3.11'",
]
typecheck = [
    "basedpyright>=1.26.0",
    "mypy>=1.11.2",
    "pyright>=1.1.390",
]

[tool.uv.workspace]
members = ["lib/inifix"]

[tool.uv.sources]
inifix = { workspace = true }

[tool.ruff.lint]
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
    "RUF022" # unsorted-dunder-all
]

[tool.ruff.lint.isort]
known-first-party = ["inifix"]

[tool.coverage.run]
branch = true
source = [
    "src/__init__.py",
    "tests",
    "lib/inifix/src",
    "lib/inifix/tests",
]
omit = [
    "scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    # a more strict default pragma
    "\\# pragma: no cover\\b",

    # allow defensive code
    "^\\s*raise NotImplementedError\\b",

    ": \\.\\.\\.(\\s*#.*)?$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]

[tool.pyright]
reportImplicitStringConcatenation = false

# allow defensive code
reportUnreachable = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error",
    "ignore:assertions not in test modules or plugins will be ignored:UserWarning",
]
addopts = "-ra"
