[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inifix"
version = "7.0.0"
description = "An I/O library for Pluto-style ini files."
authors = [
    { name = "C.M.T. Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = []

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/neutrinoceros/inifix"
Changelog = "https://github.com/neutrinoceros/inifix/blob/main/CHANGELOG.md"

[tool.hatch]
version.source = "vcs"

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "LICENSE",
    "CHANGELOG.md",
    "README.md",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/inifix/_version.py"
template = '''
# This file is automatically generated by Hatch
from typing import Final

__all__ = ["__version__", "__version_tuple__"]

__version__: Final = {version!r}
__version_tuple__: tuple[int, int, int] = {version_tuple!r}
'''

[dependency-groups]
test = [
    "hypothesis>=6.110.0",
    "pytest>=9.0.0",
    "runtime-introspect>=0.3.0",
    "typing-extensions>=4.13.0 ; python_full_version < '3.14'",
]
concurrency = [
    {include-group = "test"},
    "pytest-repeat>=0.9.3",
]
covcheck = [
    {include-group = "test"},
    "coverage>=7.10.0",
]
typecheck = [
    {include-group = "test"},
    "basedpyright>=1.26.0",
    "mypy>=1.11.2",
    "pyright>=1.1.390",
]

[tool.uv.workspace]
members = ["cli/inifix-cli"]

[tool.uv.sources]
inifix = { workspace = true }
inifix-cli = { workspace = true }

[tool.pyright]
reportImplicitStringConcatenation = false

# allow defensive code
reportUnreachable = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest]
minversion = "9.0"
strict = true
addopts = ["-ra"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = [
    "src/inifix",
    "tests",
    "cli/inifix-cli/src",
    "cli/inifix-cli/tests",
]
omit = [
    "cli/inifix-cli/src/inifix_cli/__main__.py",
    "scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# use exclude_also to *extend* the default exclude_lines,
# and allow purely defensive code patterns
exclude_also = [
    "^\\s*raise (Assertion|NotImplemented|Runtime)Error\\b",
    "^\\s*case _ as unreachable:",
]

[tool.ruff.lint]
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
    "RUF022" # unsorted-dunder-all
]

[tool.ruff.lint.isort]
known-first-party = ["inifix"]
