[metadata]
name = inifix
version = 1.0.0
description = I/O facility for Idefix/Pluto configuration files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutrinoceros/inifix
author = C.M.T. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
packages = find:
install_requires =
    more-itertools>=8.4
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    inifix-format=inifix.format:main
    inifix-validate=inifix.validate:main

[options.extras_require]
dev =
    pre-commit
    pytest>=6.1

[flake8]
exclude = *__init__.py
ignore = E203, E501, W503
