[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inifix-cli"
version = "1.1.0"
description = "A command line interface for inifix."
authors = [
    { name = "C.M.T. Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0, <8.5.0",
    "inifix>=6.1.0",
]

[project.scripts]
inifix = "inifix_cli:app"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/neutrinoceros/inifix"
Changelog = "https://github.com/neutrinoceros/inifix/blob/main/cli/inifix-cli/CHANGELOG.md"
"Changelog (historical)" = "https://github.com/neutrinoceros/inifix/blob/main/CHANGELOG.md"

[dependency-groups]
test = [
    "hypothesis>=6.110.0",
    "pytest>=9.0.0",
    "runtime-introspect>=0.3.0",
    "typing-extensions>=4.13.0 ; python_full_version < '3.14'",
]
concurrency = [
    {include-group = "test"},
    "pytest-repeat>=0.9.3",
]
covcheck = [
    {include-group = "test"},
    "coverage>=7.10.0",
]
typecheck = [
    "basedpyright>=1.26.0",
    "mypy>=1.11.2",
    "pyright>=1.1.390",
]

[tool.flit.sdist]
include = ["tests/"]

[tool.ruff.lint.isort]
known-first-party = ["inifix"]
